<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/new_item_et"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/default_item_box_text"
        android:textColor="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_mode_btn" />

    <ToggleButton
        android:id="@+id/switch_mode_btn"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/S"
        android:checked="false"
        android:textColor="@color/white"
        android:textOff="@string/delete_selection_off_btn"
        android:textOn="@string/delete_selection_on_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_list" />

    <Button
        android:id="@+id/run_btn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/S"
        android:text="@string/run_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_item_btn"
        app:layout_constraintStart_toEndOf="@+id/clean_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="372dp"
        android:layout_height="343dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/clean_btn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/S"
        android:text="@string/clean_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_item_btn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/S"
        android:text="@string/add_item_btn"
        android:textColor="@color/white"
        android:textColorLink="@color/S"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="23dp"
        android:background="@color/P_D"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/P"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/ItemListLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/item_list_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>